style/style.css
body{
  display: flex;
  flex-direction: column;
  justify-content: center;
  justify-content: space-around;
  align-content: center;
  align-items: center;
  background-image:url("../images/DC_background.png");
  color: white;
}

#container{
  background-color: rgba(114, 172, 248, 0.73);
  width: 75%;
  padding-left: 30pt;
  padding-right: 30pt;
  padding-top:20pt;
  padding-bottom: 30pt;
  margin-top: 60pt;
  margin-bottom: 75pt;
  text-align: center;
}
h5{
  font-family: sans-serif;
  color: white;
  text-align: left;
  font-size: 15pt;
  margin-bottom: 10pt;
  text-shadow: 2px 2px 4px #000000;

}
h1{
  font-family: 'Sigmar One', cursive;
  font-size: 100pt;
  color: white;
  margin-top: 10pt;
  text-shadow: 2px 2px 4px #000000;
}
#subtitle{
  text-align: center;
}

h2{
  font-family: sans-serif;
  color: white;
  text-align: left;
  font-size: 20pt;
  margin: 5pt;
  text-shadow: 2px 2px 4px #000000;
}
h4{
  font-family: 'Sigmar One', cursive;
  font-size: 30pt;
  text-align: left;
  margin: 5pt;
  text-shadow: 2px 2px 4px #000000;
}

button{
  padding: 20pt;
  font-family: sans-serif;
  font-size: 20pt;
  border-radius: 10pt;
  color: white;
  background-color:rgba(114, 172, 248, 1)

}

.round, .question{
  display: none;

}
.options{
  padding-top: 60px;
}
.answerButton{
  width: 30%;
  font-size: 15pt;
  margin: 5pt;
  padding-left: 5pt;
  padding-right: 5pt;
}
.question-image{
  width: 50%;
  height: 50%;
  display: block;
  float: left;
  margin-bottom: 5%;
  border-color:  #e1c49a;
  border-style: solid;
  border-width: 30px;
  box-shadow: 2px 2px 4px #000000;
}
button:focus {
  text-decoration: none;
  outline:none;
}


.multipleAnswer{
  width: 100pt;
  display: block;
  float: left;
  align-items: center;
}
.clearfix:after {
     visibility: hidden;
     display: block;
     font-size: 0;
     content: " ";
     clear: both;
     height: 0;
     }
.endofquiz{
  display: none;
}
#points{
  margin: 5pt;
}

#under300, #over300{
  display: none;
}
.endpic{
  width: 250pt;
  margin: 10pt;
  border-color:  #e1c49a;
  border-style: solid;
  border-width: 30px;
  box-shadow: 2px 2px 4px #000000;
  order-color:  #e1c49a;
}

